# PRE-TEST-SYSTEME-DE-RECOMMANDATION

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
data/: MEPC_Nomenclature_Camerounaise_Metiers.xlsx  NCF_Nomenclature_Camerounaise_Formations.xlsx
data/emploi/: offres.xlsx
data/esco/: digCompSkillsCollection_fr.csv  greenSkillsCollection_fr.csv  occupations_fr.csv  researchOccupationsCollection_fr.csv  researchSkillsCollection_fr.csv  skillGroups_fr.csv  skillsHierarchy_fr.csv
data/finetune/: pairs_metadata.json  pairs_test.jsonl  pairs_train.jsonl  pairs_val.jsonl
data/processed/: candidats_normalized.parquet  candidats_normalized.xlsx  mapping_isco_mepc_esco.parquet  mapping_isco_mepc_esco.xlsx  mepc_grands_groupes.parquet  mepc_grands_groupes.xlsx  mepc_groupes_base.parquet  mepc_groupes_base.xlsx  mepc_sous_groupes.parquet  ncf_dom_detailles.parquet  ncf_dom_specialises.parquet  ncf_grands_domaines.parquet  ncf_niveaux.parquet  offres_normalized.xlsx  rapport_qualite_candidats.csv  rapport_qualite_offres.csv  ~$offres_normalized.xlsx
data/raw/: demandeur.xlsx
data/raw/esco/: ISCOGroups_fr.csv  (+4 more)
methodologie/: Chapitre3_Methodologie_Systeme_Recommandation.docx  ~$apitre3_Methodologie_Systeme_Recommandation.docx
notebooks/: 01_EDA_Preprocessing.ipynb  02_Finetuning_SentenceTransformer.ipynb  03_KnowledgeGraph_Neo4j.ipynb
scripts/: run_etl.py
src/01_etl/: align_referentiels.py  build_pairs.py  normalize_candidats.py  normalize_offres.py  utils.py
src/02_finetune_st/: config_st.json  evaluate_st.py  train_sentence_transformer.py
(+6 files in other folders)
