[project]
name = "pre-test-systeme-de-recommandation"
version = "0.1.0"
description = ""
authors = [
    {name = "irchhjc",email = "ngoubiliirch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
