[project]
name = "pre-test-systeme-de-recommandation"
version = "0.1.0"
description = ""
authors = [
    {name = "irchhjc",email = "ngoubiliirch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dataset (>=2.0.0,<3.0.0)",
    "datasets (>=4.8.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
